修改编码为utf8
以前用的编码都是GB2312的

--- a/index.htm
+++ b/index.htm
@@ -4,9 +4,9 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
 
-<title>¸Éº£ÌÄĞÅÏ¢ÖĞĞÄ£­Ê×Ò³¡ï¡î30Ãëºó×Ô¶¯×ªÈëÄÚÈİÒ³¡î¡ï</title>
+<title>å¹²æµ·æ£ ä¿¡æ¯ä¸­å¿ƒï¼é¦–é¡µâ˜…â˜†30ç§’åè‡ªåŠ¨è½¬å…¥å†…å®¹é¡µâ˜†â˜…</title>
 
-<meta name="keywords" content="ghtxx,ĞÅÏ¢¼¼Êõ,×ÔÓÉ¿Õ¼ä,ÂÛÌ³,ght,¸Éº£ÌÄ,Ñ§Ï°">
+<meta name="keywords" content="ghtxx,ä¿¡æ¯æŠ€æœ¯,è‡ªç”±ç©ºé—´,è®ºå›,ght,å¹²æµ·æ£ ,å­¦ä¹ ">
 
 <meta name="baidu-site-verification" content="LluCBGTnNc" />
 
@@ -16,7 +16,7 @@
 
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <style type="text/css">
 
@@ -188,7 +188,7 @@ urchinTracker("/3884434425/test");
 
       <td colspan="6"><img name="index_r2_c1" src="images/index_r2_c1.jpg" width="664" height="13" border="0" id="index_r2_c1" alt="" /></td>
 
-      <td rowspan="10" colspan="2"><a href="http://lxj.ghtxx.cn:88/bbs/"><img name="index_r2_c7" src="images/index_r2_c7.jpg" width="339" height="308" border="0" id="index_r2_c7" alt="º£ÌÄÖ®ÃÀ£¬²»ÔÚÆäĞÎ£¬²»ÔÚÆäÏã£¬µ«ÇóÆäÒâ£¡" /></a></td>
+      <td rowspan="10" colspan="2"><a href="http://lxj.ghtxx.cn:88/bbs/"><img name="index_r2_c7" src="images/index_r2_c7.jpg" width="339" height="308" border="0" id="index_r2_c7" alt="æµ·æ£ ä¹‹ç¾ï¼Œä¸åœ¨å…¶å½¢ï¼Œä¸åœ¨å…¶é¦™ï¼Œä½†æ±‚å…¶æ„ï¼" /></a></td>
 
       <td><img src="images/spacer.gif" width="1" height="13" border="0" alt="" /></td>
 
@@ -198,7 +198,7 @@ urchinTracker("/3884434425/test");
 
       <td rowspan="2" colspan="4"><img name="index_r3_c1" src="images/index_r3_c1.jpg" width="489" height="69" border="0" id="index_r3_c1" alt="" /></td>
 
-      <td><a href="/shower/index.php/action-news"><img name="index_r3_c5" src="images/index_r3_c5.jpg" width="151" height="39" border="0" id="index_r3_c5" alt="¸Éº£ÌÄ×ÊÑ¶Æ½Ì¨" /></a></td>
+      <td><a href="/shower/index.php/action-news"><img name="index_r3_c5" src="images/index_r3_c5.jpg" width="151" height="39" border="0" id="index_r3_c5" alt="å¹²æµ·æ£ èµ„è®¯å¹³å°" /></a></td>
 
       <td rowspan="5"><img name="index_r3_c6" src="images/index_r3_c6.jpg" width="24" height="121" border="0" id="index_r3_c6" alt="" /></td>
 
@@ -208,7 +208,7 @@ urchinTracker("/3884434425/test");
 
     <tr>
 
-      <td rowspan="2"><a href="http://lxj.ghtxx.cn:88/bbs"><img name="index_r4_c5" src="images/index_r4_c5.jpg" width="151" height="39" border="0" id="index_r4_c5" alt="À´×ÔÓÉ¿Õ¼äÌÖÂÛ½»Á÷°É" /></a></td>
+      <td rowspan="2"><a href="http://lxj.ghtxx.cn:88/bbs"><img name="index_r4_c5" src="images/index_r4_c5.jpg" width="151" height="39" border="0" id="index_r4_c5" alt="æ¥è‡ªç”±ç©ºé—´è®¨è®ºäº¤æµå§" /></a></td>
 
       <td><img src="images/spacer.gif" width="1" height="30" border="0" alt="" /></td>
 
@@ -218,7 +218,7 @@ urchinTracker("/3884434425/test");
 
       <td rowspan="4"><img name="index_r5_c1" src="images/index_r5_c1.jpg" width="167" height="166" border="0" id="index_r5_c1" alt="" /></td>
 
-      <td rowspan="2" colspan="2"><a href="/bbs"><img name="index_r5_c2" src="images/index_r5_c2.jpg" width="296" height="30" border="0" id="index_r5_c2" alt="½øÈë×ÔÓÉ¿Õ¼äÂÛÌ³" /></a></td>
+      <td rowspan="2" colspan="2"><a href="/bbs"><img name="index_r5_c2" src="images/index_r5_c2.jpg" width="296" height="30" border="0" id="index_r5_c2" alt="è¿›å…¥è‡ªç”±ç©ºé—´è®ºå›" /></a></td>
 
       <td rowspan="3"><img name="index_r5_c4" src="images/index_r5_c4.jpg" width="26" height="52" border="0" id="index_r5_c4" alt="" /></td>
 
@@ -228,7 +228,7 @@ urchinTracker("/3884434425/test");
 
     <tr>
 
-      <td rowspan="2"><a href="http://aqde.taobao.com/"><img name="index_r6_c5" src="images/index_r6_c5.jpg" width="151" height="43" border="0" id="index_r6_c5" alt="µã´Ë½øÈëÉÌ³Ç¹ºÎï" /></a></td>
+      <td rowspan="2"><a href="http://aqde.taobao.com/"><img name="index_r6_c5" src="images/index_r6_c5.jpg" width="151" height="43" border="0" id="index_r6_c5" alt="ç‚¹æ­¤è¿›å…¥å•†åŸè´­ç‰©" /></a></td>
 
       <td><img src="images/spacer.gif" width="1" height="21" border="0" alt="" /></td>
 
@@ -244,7 +244,7 @@ urchinTracker("/3884434425/test");
 
     <tr>
 
-      <td rowspan="5" colspan="3"><a href="http://aqde.taobao.com"><img name="index_r8_c4" src="images/index_r8_c4.jpg" width="201" height="201" border="0" id="index_r8_c4" alt="ÔÆ¼ÆËãÊÇÎ´À´µÄ¼ÆËãÄ£Ê½£¬ÏÖÔÚ¾ÍÀ´ÌåÑé°É£¬¹ú²ú¿ªÔ´ÔÆ¼ÆËãÆ½Ì¨LuoYunCloud" /></a></td>
+      <td rowspan="5" colspan="3"><a href="http://aqde.taobao.com"><img name="index_r8_c4" src="images/index_r8_c4.jpg" width="201" height="201" border="0" id="index_r8_c4" alt="äº‘è®¡ç®—æ˜¯æœªæ¥çš„è®¡ç®—æ¨¡å¼ï¼Œç°åœ¨å°±æ¥ä½“éªŒå§ï¼Œå›½äº§å¼€æºäº‘è®¡ç®—å¹³å°LuoYunCloud" /></a></td>
 
       <td><img src="images/spacer.gif" width="1" height="114" border="0" alt="" /></td>
 
@@ -252,7 +252,7 @@ urchinTracker("/3884434425/test");
 
     <tr>
 
-      <td rowspan="8"><img name="index_r9_c1" src="images/index_r9_c1.jpg" width="167" height="300" border="0" id="index_r9_c1" alt="Ö¾´æ¸ßÔ¶£¬ÊØ×¡¸ù±¾£¬Ó­·ç¶øÁ¢" /></td>
+      <td rowspan="8"><img name="index_r9_c1" src="images/index_r9_c1.jpg" width="167" height="300" border="0" id="index_r9_c1" alt="å¿—å­˜é«˜è¿œï¼Œå®ˆä½æ ¹æœ¬ï¼Œè¿é£è€Œç«‹" /></td>
 
       <td><img src="images/spacer.gif" width="1" height="12" border="0" alt="" /></td>
 
@@ -260,7 +260,7 @@ urchinTracker("/3884434425/test");
 
     <tr>
 
-      <td colspan="2"><a href="http://i.ghtxx.cn"><img name="index_r10_c2" src="images/index_r10_c2.jpg" width="296" height="23" border="0" id="index_r10_c2" alt="·ÃÎÊÕ¾³¤²©¿Í»ñÈ¡¸ü¶àĞÅÏ¢" /></a></td>
+      <td colspan="2"><a href="http://i.ghtxx.cn"><img name="index_r10_c2" src="images/index_r10_c2.jpg" width="296" height="23" border="0" id="index_r10_c2" alt="è®¿é—®ç«™é•¿åšå®¢è·å–æ›´å¤šä¿¡æ¯" /></a></td>
 
       <td><img src="images/spacer.gif" width="1" height="23" border="0" alt="" /></td>
 
@@ -270,19 +270,19 @@ urchinTracker("/3884434425/test");
 
       <td colspan="2" rowspan="3" bgcolor="#EFEFEF"><li>
 
-        <div align="left"><span class="STYLE1"><span class="STYLE2"><span class="STYLE3"><span class="STYLE4"><span class="STYLE5"><span class="STYLE6"><a href="draw.html" target="_blank">ÍøÂçÍ¿Ñ»°å</a><a href="https://groups.google.com/group/ghtxx" target="_blank">¡²¿Õ¼ä±¸ÓÃÂÛÌ³¡³</a></span></span></span></span></span></span></div>
+        <div align="left"><span class="STYLE1"><span class="STYLE2"><span class="STYLE3"><span class="STYLE4"><span class="STYLE5"><span class="STYLE6"><a href="draw.html" target="_blank">ç½‘ç»œæ¶‚é¸¦æ¿</a><a href="https://groups.google.com/group/ghtxx" target="_blank">ã€”ç©ºé—´å¤‡ç”¨è®ºå›ã€•</a></span></span></span></span></span></span></div>
 
        </li>
 
 					      <li class="STYLE6">
 
-					        <div align="left"><a href="calc.html" target="_blank">ÍøÂç¼ÆËãÆ÷</a><a href="/eyeos/" target="_blank">¡²eyeos²Ù×÷ÏµÍ³up:share¡³</a></div>
+					        <div align="left"><a href="calc.html" target="_blank">ç½‘ç»œè®¡ç®—å™¨</a><a href="/eyeos/" target="_blank">ã€”eyeosæ“ä½œç³»ç»Ÿup:shareã€•</a></div>
 
 					      </li>
 
 				          <li class="STYLE6">
 
-				            <div align="left"><a href="date.html" target="_blank">¼òÒ×ÍòÄêÀú</a> and 
+				            <div align="left"><a href="date.html" target="_blank">ç®€æ˜“ä¸‡å¹´å†</a> and 
 
                                     <script>utmx_section("Register here")</script>bbs register</noscript>
 
@@ -292,25 +292,25 @@ urchinTracker("/3884434425/test");
 
 				          <li class="STYLE6">
 
-				            <div align="left"><a href="http://i.ghtxx.cn/index.php/action-channel-name-school" target="_blank">googleµØÍ¼Ó¦ÓÃ</a> and <a href="/test.php" target="_blank">ÍøËÙ²âÊÔ</a></div>
+				            <div align="left"><a href="http://i.ghtxx.cn/index.php/action-channel-name-school" target="_blank">googleåœ°å›¾åº”ç”¨</a> and <a href="/test.php" target="_blank">ç½‘é€Ÿæµ‹è¯•</a></div>
 
 				          </li>
 
         <li class="STYLE6">
 
-          <div align="left"><a href="https://exmail.qq.com/cgi-bin/loginpage?t=logindomain&s=logout&f=biz&param=%40ghtxx.cn" target="_blank">¹ÜÀíµç×ÓÓÊ¼ş</a><a href="http://i.ghtxx.cn" target="_blank">ÏÈ[×¢²á×Ô¼º@ghtxx.cnÓÊ¼ş]</a></div>
+          <div align="left"><a href="https://exmail.qq.com/cgi-bin/loginpage?t=logindomain&s=logout&f=biz&param=%40ghtxx.cn" target="_blank">ç®¡ç†ç”µå­é‚®ä»¶</a><a href="http://i.ghtxx.cn" target="_blank">å…ˆ[æ³¨å†Œè‡ªå·±@ghtxx.cné‚®ä»¶]</a></div>
 
         </li>
 
         <li class="STYLE6">
 
-          <div align="left">ÌØ±ğÃùĞ»<a href="http://www.gnu.org" target="_blank">GNU.org</a>¡¢<a href="http://www.apache.org/" target="_blank">apache</a>ÒÔ¼°<a href="http://www.linux.org/" target="_blank">Linux</a>µÄ°ïÖú</div>
+          <div align="left">ç‰¹åˆ«é¸£è°¢<a href="http://www.gnu.org" target="_blank">GNU.org</a>ã€<a href="http://www.apache.org/" target="_blank">apache</a>ä»¥åŠ<a href="http://www.linux.org/" target="_blank">Linux</a>çš„å¸®åŠ©</div>
 
         </li>
 
         <li class="STYLE6">
 
-          <div align="left"><a href="http://www.miibeian.gov.cn/" target="_blank">  ÍîICP±¸06012908ºÅ</a>            </div>
+          <div align="left"><a href="http://www.miibeian.gov.cn/" target="_blank">  çš–ICPå¤‡06012908å·</a>            </div>
 
             </div>
 
@@ -348,13 +348,13 @@ urchinTracker("/3884434425/test");
 
 <br/>
 
-<label for="sbi" style="display: none">ÊäÈëÄúµÄËÑË÷×Ö´Ê</label>
+<label for="sbi" style="display: none">è¾“å…¥æ‚¨çš„æœç´¢å­—è¯</label>
 
 <input type="text" name="q" size="10" maxlength="255" value="" id="sbi"></input>
 
-<label for="sbb" style="display: none">Ìá½»ËÑË÷±íµ¥</label>
+<label for="sbb" style="display: none">æäº¤æœç´¢è¡¨å•</label>
 
-<input type="submit" name="sa" value="ËÑË÷" id="sbb"></input>
+<input type="submit" name="sa" value="æœç´¢" id="sbb"></input>
 
 <input type="hidden" name="client" value="pub-2979942301121124"></input>
 
@@ -400,7 +400,7 @@ urchinTracker("/3884434425/test");
 
     <tr>
 
-      <td><a href="/hdwiki"><img name="index_r15_c5" src="images/index_r15_c5.jpg" width="151" height="92" border="0" id="index_r15_c5" alt="µ½¸Éº£ÌÄÖĞĞÄÑ§Ï°†ª" /></a></td>
+      <td><a href="/hdwiki"><img name="index_r15_c5" src="images/index_r15_c5.jpg" width="151" height="92" border="0" id="index_r15_c5" alt="åˆ°å¹²æµ·æ£ ä¸­å¿ƒå­¦ä¹ å•°" /></a></td>
 
       <td><img src="images/spacer.gif" width="1" height="92" border="0" alt="" /></td>
 
@@ -418,7 +418,7 @@ urchinTracker("/3884434425/test");
 
       <td colspan="7"><img name="index_r17_c1" src="images/index_r17_c1.jpg" width="811" height="14" border="0" id="index_r17_c1" alt="" /></td>
 
-      <td><a href="http://lxj.ghtxx.cn:88/shower/"><img name="index_r17_c8" src="images/index_r17_c8.jpg" width="192" height="14" border="0" id="index_r17_c8" alt="Õ¾³¤²©¿Í" /></a></td>
+      <td><a href="http://lxj.ghtxx.cn:88/shower/"><img name="index_r17_c8" src="images/index_r17_c8.jpg" width="192" height="14" border="0" id="index_r17_c8" alt="ç«™é•¿åšå®¢" /></a></td>
 
       <td><img src="images/spacer.gif" width="1" height="14" border="0" alt="" /></td>
 
