--- a/index.htm
+++ b/index.htm
@@ -236,7 +236,7 @@ urchinTracker("/3884434425/test");
 
     <tr>
 
-      <td colspan="2" rowspan="3" nowrap="nowrap" bgcolor="#E7E7E7" ><li class="STYLE6"><script language="JavaScript" src="/bbs/api/javascript.php?key=threads_mainpage"></script></li></td>
+      <td colspan="2" rowspan="3" nowrap="nowrap" bgcolor="#E7E7E7" ><li class="STYLE6"><script language="JavaScript" src="https://lxj.ghtxx.cn:88/bbs/api/javascript.php?key=threads_mainpage"></script></li></td>
 
       <td><img src="images/spacer.gif" width="1" height="22" border="0" alt="" /></td>
 
@@ -276,7 +276,7 @@ urchinTracker("/3884434425/test");
 
 					      <li class="STYLE6">
 
-					        <div align="left"><a href="calc.html" target="_blank">网络计算器</a><a href="/eyeos/" target="_blank">〔eyeos操作系统up:share〕</a></div>
+					        <div align="left"><a href="calc.html" target="_blank">网络计算器</a></div>
 
 					      </li>
 
@@ -332,55 +332,7 @@ urchinTracker("/3884434425/test");
 
       <td rowspan="3"><img name="index_r13_c4" src="images/index_r13_c4.jpg" width="26" height="183" border="0" id="index_r13_c4" alt="" /></td>
 
-      <td rowspan="2" bgcolor="#E0E0DE"><!-- Search Google -->
-
-      			<center>
-
-<form method="get" action="http://www.google.cn/custom" target="google_window">
-
-<table bgcolor="#E0E0DE">
-
-<tr><td nowrap="nowrap" valign="top" align="left" height="32">
-
-<a href="http://www.google.com/">
-
-<img src="/linkimg/Logo_25wht.gif" border="0" alt="Google" align="middle"></img></a>
-
-<br/>
-
-<label for="sbi" style="display: none">输入您的搜索字词</label>
-
-<input type="text" name="q" size="10" maxlength="255" value="" id="sbi"></input>
-
-<label for="sbb" style="display: none">提交搜索表单</label>
-
-<input type="submit" name="sa" value="搜索" id="sbb"></input>
-
-<input type="hidden" name="client" value="pub-2979942301121124"></input>
-
-<input type="hidden" name="forid" value="1"></input>
-
-<input type="hidden" name="channel" value="9892285753"></input>
-
-<input type="hidden" name="ie" value="GB2312"></input>
-
-<input type="hidden" name="oe" value="GB2312"></input>
-
-<input type="hidden" name="flav" value="0000"></input>
-
-<input type="hidden" name="sig" value="NHCqc0PBXiJhvctq"></input>
-
-<input type="hidden" name="cof" value="GALT:#003324;GL:1;DIV:#66CC99;VLC:FF6600;AH:center;BGC:C5DBCF;LBGC:73B59C;ALC:000000;LC:000000;T:330033;GFNT:333300;GIMP:333300;LH:50;LW:99;L:http://ghtxx.cn/logo.gif;S:http://ghtxx.cn/bbs/;FORID:1"></input>
-
-<input type="hidden" name="hl" value="zh-CN"></input>
-
-</td></tr></table>
-
-</form>
-
-</center>
-
-<!-- Search Google --></td>
+      <td rowspan="2" bgcolor="#E0E0DE"></td>
 
       <td rowspan="3"><img name="index_r13_c6" src="images/index_r13_c6.jpg" width="24" height="183" border="0" id="index_r13_c6" alt="" /></td>
 
