清除一些错误链接

--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
 
-<title>干海棠信息中心－首页★☆30秒后自动转入内容页☆★</title>
+<title>★☆干海棠信息中心－首页☆★</title>
 
 <meta name="keywords" content="ghtxx,信息技术,自由空间,论坛,ght,干海棠,学习">
 
@@ -198,7 +198,7 @@ urchinTracker("/3884434425/test");
 
       <td rowspan="2" colspan="4"><img name="index_r3_c1" src="images/index_r3_c1.jpg" width="489" height="69" border="0" id="index_r3_c1" alt="" /></td>
 
-      <td><a href="/shower/index.php/action-news"><img name="index_r3_c5" src="images/index_r3_c5.jpg" width="151" height="39" border="0" id="index_r3_c5" alt="干海棠资讯平台" /></a></td>
+      <td><a href="https://lxj.ghtxx.cn:88/shower/index.php/action-news"><img name="index_r3_c5" src="images/index_r3_c5.jpg" width="151" height="39" border="0" id="index_r3_c5" alt="干海棠资讯平台" /></a></td>
 
       <td rowspan="5"><img name="index_r3_c6" src="images/index_r3_c6.jpg" width="24" height="121" border="0" id="index_r3_c6" alt="" /></td>
 
@@ -236,7 +236,7 @@ urchinTracker("/3884434425/test");
 
     <tr>
 
-      <td colspan="2" rowspan="3" nowrap="nowrap" bgcolor="#E7E7E7" ><li class="STYLE6"><script language="JavaScript" src="https://lxj.ghtxx.cn:88/bbs/api/javascript.php?key=threads_mainpage"></script></li></td>
+      <td colspan="2" rowspan="3" nowrap="nowrap" bgcolor="#E7E7E7" ><li class="STYLE6"> </li></td>
 
       <td><img src="images/spacer.gif" width="1" height="22" border="0" alt="" /></td>
 
@@ -260,7 +260,7 @@ urchinTracker("/3884434425/test");
 
     <tr>
 
-      <td colspan="2"><a href="http://i.ghtxx.cn"><img name="index_r10_c2" src="images/index_r10_c2.jpg" width="296" height="23" border="0" id="index_r10_c2" alt="访问站长博客获取更多信息" /></a></td>
+      <td colspan="2"><a href="https://i.ghtxx.cn"><img name="index_r10_c2" src="images/index_r10_c2.jpg" width="296" height="23" border="0" id="index_r10_c2" alt="访问站长博客获取更多信息" /></a></td>
 
       <td><img src="images/spacer.gif" width="1" height="23" border="0" alt="" /></td>
 
@@ -292,7 +292,7 @@ urchinTracker("/3884434425/test");
 
 				          <li class="STYLE6">
 
-				            <div align="left"><a href="http://i.ghtxx.cn/index.php/action-channel-name-school" target="_blank">google地图应用</a> and <a href="/test.php" target="_blank">网速测试</a></div>
+				            <div align="left"><a href="https://www.google.com/maps" target="_blank">google地图应用</a></div>
 
 				          </li>
 
@@ -352,7 +352,7 @@ urchinTracker("/3884434425/test");
 
     <tr>
 
-      <td><a href="/hdwiki"><img name="index_r15_c5" src="images/index_r15_c5.jpg" width="151" height="92" border="0" id="index_r15_c5" alt="到干海棠中心学习啰" /></a></td>
+      <td><a href="https://lxj.ghtxx.cn:88/hdwiki"><img name="index_r15_c5" src="images/index_r15_c5.jpg" width="151" height="92" border="0" id="index_r15_c5" alt="到干海棠中心学习啰" /></a></td>
 
       <td><img src="images/spacer.gif" width="1" height="92" border="0" alt="" /></td>
 
