变更编码方式为UTF-8

--- a/aqjy/index.htm
+++ b/aqjy/index.htm
@@ -1,8 +1,8 @@
 <html>
 <head>
 <title>&#8240;&#8224;Y&aring;\&curren;&Iacute;\W</title>
-<meta http-equiv="Content-Type" content="text/html;">
-<!-- Fireworks MX Dreamweaver MX target.  Created Mon Jan 04 08:53:39 GMT+0800 (?D1¨²¡À¨º¡Á?¨º¡À??) 2010-->
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<!-- Fireworks MX Dreamweaver MX target.  Created Mon Jan 04 08:53:39 GMT+0800 (?D1ÃºÂ±ÃªÃ—?ÃªÂ±??) 2010-->
 </head>
 <body bgcolor="#0066ff">
 <div align="center"><img name="index" src="images/index.gif" width="640" height="480" border="0" usemap="#m_index" alt="">
