--- a/index.htm
+++ b/index.htm
@@ -218,7 +218,7 @@ urchinTracker("/3884434425/test");
 
       <td rowspan="4"><img name="index_r5_c1" src="images/index_r5_c1.jpg" width="167" height="166" border="0" id="index_r5_c1" alt="" /></td>
 
-      <td rowspan="2" colspan="2"><a href="/bbs"><img name="index_r5_c2" src="images/index_r5_c2.jpg" width="296" height="30" border="0" id="index_r5_c2" alt="进入自由空间论坛" /></a></td>
+      <td rowspan="2" colspan="2"><a href="https://lxj.ghtxx.cn:88/bbs"><img name="index_r5_c2" src="images/index_r5_c2.jpg" width="296" height="30" border="0" id="index_r5_c2" alt="进入自由空间论坛" /></a></td>
 
       <td rowspan="3"><img name="index_r5_c4" src="images/index_r5_c4.jpg" width="26" height="52" border="0" id="index_r5_c4" alt="" /></td>
 
@@ -298,13 +298,13 @@ urchinTracker("/3884434425/test");
 
         <li class="STYLE6">
 
-          <div align="left"><a href="https://exmail.qq.com/cgi-bin/loginpage?t=logindomain&s=logout&f=biz&param=%40ghtxx.cn" target="_blank">管理电子邮件</a><a href="http://i.ghtxx.cn" target="_blank">先[注册自己@ghtxx.cn邮件]</a></div>
+          <div align="left"><a href="https://exmail.qq.com/cgi-bin/loginpage?t=logindomain&s=logout&f=biz&param=%40ghtxx.cn" target="_blank">管理电子邮件</a></div>
 
         </li>
 
         <li class="STYLE6">
 
-          <div align="left">特别鸣谢<a href="http://www.gnu.org" target="_blank">GNU.org</a>、<a href="http://www.apache.org/" target="_blank">apache</a>以及<a href="http://www.linux.org/" target="_blank">Linux</a>的帮助</div>
+          <div align="left">鸣谢<a href="http://www.gnu.org" target="_blank">GNU.org</a>、<a href="http://www.apache.org/" target="_blank">apache</a>以及<a href="http://www.linux.org/" target="_blank">Linux</a></div>
 
         </li>
 
