--- a/zf/index_zhufu.html
+++ b/zf/index_zhufu.html
@@ -12,16 +12,16 @@ body {
 .STYLE3 {
 	color: #993300;
 	font-size: 13px;
-	font-family: "ĞÂËÎÌå";
+	font-family: "æ–°å®‹ä½“";
 }
 -->
 </style>
 <script language=JavaScript>
 <!--
-var url = 'zhufu.htm';//Òª¼ÓÔØµÄÍøÒ³Ö¸Ïò
+var url = 'zhufu.htm';//è¦åŠ è½½çš„ç½‘é¡µæŒ‡å‘
 
 document.write("<form method=post name=proccess>");
-document.write("<font style=\"font-family:'Times New Roman';font-size:10.5pt\">Êı¾İ¼ÓÔØÖĞ£¬×£¸£ÂíÉÏ¿ªÊ¼</font>");
+document.write("<font style=\"font-family:'Times New Roman';font-size:10.5pt\">æ•°æ®åŠ è½½ä¸­ï¼Œç¥ç¦é©¬ä¸Šå¼€å§‹</font>");
 for(i=0;i<3;i++)
 document.write("<input class=proccess>")
 document.write("</form>");
@@ -43,4 +43,4 @@ else location.href = url;
 //-->
 </script>
 <body onLoad="self.location.href = url;" style="overflow:hidden;overflow-y:hidden">
-<span class="STYLE3"> <a href="zhufu.htm">µãÕâÌø¹ı</a></span> 
+<span class="STYLE3"> <a href="zhufu.htm">ç‚¹è¿™è·³è¿‡</a></span> 
