--- a/index.htm
+++ b/index.htm
@@ -188,7 +188,7 @@ urchinTracker("/3884434425/test");
 
       <td colspan="6"><img name="index_r2_c1" src="images/index_r2_c1.jpg" width="664" height="13" border="0" id="index_r2_c1" alt="" /></td>
 
-      <td rowspan="10" colspan="2"><a href="http://lxj.ghtxx.cn:88/bbs/"><img name="index_r2_c7" src="images/index_r2_c7.jpg" width="339" height="308" border="0" id="index_r2_c7" alt="海棠之美，不在其形，不在其香，但求其意！" /></a></td>
+      <td rowspan="10" colspan="2"><img name="index_r2_c7" src="images/index_r2_c7.jpg" width="339" height="308" border="0" id="index_r2_c7" alt="海棠之美，不在其形，不在其香，但求其意！" /></td>
 
       <td><img src="images/spacer.gif" width="1" height="13" border="0" alt="" /></td>
 
@@ -198,7 +198,7 @@ urchinTracker("/3884434425/test");
 
       <td rowspan="2" colspan="4"><img name="index_r3_c1" src="images/index_r3_c1.jpg" width="489" height="69" border="0" id="index_r3_c1" alt="" /></td>
 
-      <td><a href="https://lxj.ghtxx.cn:88/shower/index.php/action-news"><img name="index_r3_c5" src="images/index_r3_c5.jpg" width="151" height="39" border="0" id="index_r3_c5" alt="干海棠资讯平台" /></a></td>
+      <td><a href="http://lxj.ghtxx.cn:88/shower/index.php/action-news"><img name="index_r3_c5" src="images/index_r3_c5.jpg" width="151" height="39" border="0" id="index_r3_c5" alt="干海棠资讯平台" /></a></td>
 
       <td rowspan="5"><img name="index_r3_c6" src="images/index_r3_c6.jpg" width="24" height="121" border="0" id="index_r3_c6" alt="" /></td>
 
@@ -236,7 +236,7 @@ urchinTracker("/3884434425/test");
 
     <tr>
 
-      <td colspan="2" rowspan="3" nowrap="nowrap" bgcolor="#E7E7E7" ><li class="STYLE6"> </li></td>
+      <td colspan="2" rowspan="3" nowrap="nowrap" bgcolor="#E7E7E7" ><li class="STYLE6"></li></td>
 
       <td><img src="images/spacer.gif" width="1" height="22" border="0" alt="" /></td>
 
