--- a/index.htm
+++ b/index.htm
@@ -18,71 +18,6 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<style type="text/css">
-
-td img {display: block;}.STYLE1 {font-size: 16px}
-
-.STYLE2 {font-size: 12px}
-
-.STYLE3 {font-size: 12}
-
-.STYLE4 {font-size: 12pt}
-
-.STYLE5 {font-size: 9pt}
-
-.STYLE6 {font-size: 10pt}
-
-body {
-
-	background-color: #000000;
-
-	margin-left: 0px;
-
-	margin-top: 0px;
-
-	margin-right: 0px;
-
-	margin-bottom: 0px;
-
-}
-
-body,td,th {
-
-	font-size: 0px;
-
-}
-
-a:link {
-
-	color: #333333;
-
-	text-decoration: none;
-
-}
-
-a:visited {
-
-	color: #000033;
-
-	text-decoration: none;
-
-}
-
-a:hover {
-
-	text-decoration: underline;
-
-}
-
-a:active {
-
-	text-decoration: none;
-
-}
-
-</style>
-
-<!--Fireworks 8 Dreamweaver 8 target.  Created Thu Nov 29 18:47:35 GMT+0800 2007-->
 
 <!-- Google Website Optimizer Control Script -->
 
@@ -146,241 +81,19 @@ urchinTracker("/3884434425/test");
 
 <!-- End of Google Website Optimizer Tracking Script -->
 
+这个网站已经到了该全面重建的时候了，这只是我06年开始计算机网络化教学的一个试验田，可惜不能得到重视，也没有足够的资源来探索，现将其整理恢复中。这个网站已经服务过数千名学生，不知道有几个学生会真的以计算机为学业目标了。
+	  <br>
+	  如果你有兴趣支持我继续研究这个网站化的教学试验，欢迎通过微信或paypal支持我。<a href="https://www.paypal.com/paypalme/leejarod" target="_blank">我的PayPal链接</a>
+	  
+	  <br>
+	  <img name="wechat-payme" src="images/wepay.jpg" width="667" height="671" border="0" id="wepay" alt="用微信扫一扫向我付款" />
 
-
-<table width="1003" border="0" align="center" cellpadding="0" cellspacing="0">
-
-    <!-- fwtable fwsrc="new2007.png" fwbase="index.jpg" fwstyle="Dreamweaver" fwdocid = "2047156445" fwnested="0" -->
-
-    <tr>
-
-      <td><img src="images/spacer.gif" width="167" height="1" border="0" alt="" /></td>
-
-      <td><img src="images/spacer.gif" width="172" height="1" border="0" alt="" /></td>
-
-      <td><img src="images/spacer.gif" width="124" height="1" border="0" alt="" /></td>
-
-      <td><img src="images/spacer.gif" width="26" height="1" border="0" alt="" /></td>
-
-      <td><img src="images/spacer.gif" width="151" height="1" border="0" alt="" /></td>
-
-      <td><img src="images/spacer.gif" width="24" height="1" border="0" alt="" /></td>
-
-      <td><img src="images/spacer.gif" width="147" height="1" border="0" alt="" /></td>
-
-      <td><img src="images/spacer.gif" width="192" height="1" border="0" alt="" /></td>
-
-      <td><img src="images/spacer.gif" width="1" height="1" border="0" alt="" /></td>
-
-    </tr>
-
-    
-
-    <tr>
-
-      <td colspan="8"><img name="index_r1_c1" src="images/index_r1_c1.jpg" width="1003" height="28" border="0" id="index_r1_c1" alt="" /></td>
-
-      <td><img src="images/spacer.gif" width="1" height="28" border="0" alt="" /></td>
-
-    </tr>
-
-    <tr>
-
-      <td colspan="6"><img name="index_r2_c1" src="images/index_r2_c1.jpg" width="664" height="13" border="0" id="index_r2_c1" alt="" /></td>
 
       <td rowspan="10" colspan="2"><img name="index_r2_c7" src="images/index_r2_c7.jpg" width="339" height="308" border="0" id="index_r2_c7" alt="海棠之美，不在其形，不在其香，但求其意！" /></td>
 
-      <td><img src="images/spacer.gif" width="1" height="13" border="0" alt="" /></td>
-
-    </tr>
-
-    <tr>
-
-      <td rowspan="2" colspan="4"><img name="index_r3_c1" src="images/index_r3_c1.jpg" width="489" height="69" border="0" id="index_r3_c1" alt="" /></td>
-
-      <td><a href="http://lxj.ghtxx.cn:88/shower/index.php/action-news"><img name="index_r3_c5" src="images/index_r3_c5.jpg" width="151" height="39" border="0" id="index_r3_c5" alt="干海棠资讯平台" /></a></td>
-
-      <td rowspan="5"><img name="index_r3_c6" src="images/index_r3_c6.jpg" width="24" height="121" border="0" id="index_r3_c6" alt="" /></td>
-
-      <td><img src="images/spacer.gif" width="1" height="39" border="0" alt="" /></td>
-
-    </tr>
-
-    <tr>
-
-      <td rowspan="2"><a href="http://lxj.ghtxx.cn:88/bbs"><img name="index_r4_c5" src="images/index_r4_c5.jpg" width="151" height="39" border="0" id="index_r4_c5" alt="来自由空间讨论交流吧" /></a></td>
-
-      <td><img src="images/spacer.gif" width="1" height="30" border="0" alt="" /></td>
-
-    </tr>
-
-    <tr>
-
-      <td rowspan="4"><img name="index_r5_c1" src="images/index_r5_c1.jpg" width="167" height="166" border="0" id="index_r5_c1" alt="" /></td>
-
-      <td rowspan="2" colspan="2"><a href="https://lxj.ghtxx.cn:88/bbs"><img name="index_r5_c2" src="images/index_r5_c2.jpg" width="296" height="30" border="0" id="index_r5_c2" alt="进入自由空间论坛" /></a></td>
-
-      <td rowspan="3"><img name="index_r5_c4" src="images/index_r5_c4.jpg" width="26" height="52" border="0" id="index_r5_c4" alt="" /></td>
-
-      <td><img src="images/spacer.gif" width="1" height="9" border="0" alt="" /></td>
-
-    </tr>
-
-    <tr>
-
-      <td rowspan="2"><a href="http://aqde.taobao.com/"><img name="index_r6_c5" src="images/index_r6_c5.jpg" width="151" height="43" border="0" id="index_r6_c5" alt="点此进入商城购物" /></a></td>
-
-      <td><img src="images/spacer.gif" width="1" height="21" border="0" alt="" /></td>
-
-    </tr>
-
-    <tr>
-
-      <td colspan="2" rowspan="3" nowrap="nowrap" bgcolor="#E7E7E7" ><li class="STYLE6"></li></td>
-
-      <td><img src="images/spacer.gif" width="1" height="22" border="0" alt="" /></td>
-
-    </tr>
-
-    <tr>
-
-      <td rowspan="5" colspan="3"><a href="http://aqde.taobao.com"><img name="index_r8_c4" src="images/index_r8_c4.jpg" width="201" height="201" border="0" id="index_r8_c4" alt="云计算是未来的计算模式，现在就来体验吧，国产开源云计算平台LuoYunCloud" /></a></td>
-
-      <td><img src="images/spacer.gif" width="1" height="114" border="0" alt="" /></td>
-
-    </tr>
-
-    <tr>
-
       <td rowspan="8"><img name="index_r9_c1" src="images/index_r9_c1.jpg" width="167" height="300" border="0" id="index_r9_c1" alt="志存高远，守住根本，迎风而立" /></td>
 
-      <td><img src="images/spacer.gif" width="1" height="12" border="0" alt="" /></td>
-
-    </tr>
-
-    <tr>
-
-      <td colspan="2"><a href="https://i.ghtxx.cn"><img name="index_r10_c2" src="images/index_r10_c2.jpg" width="296" height="23" border="0" id="index_r10_c2" alt="访问站长博客获取更多信息" /></a></td>
-
-      <td><img src="images/spacer.gif" width="1" height="23" border="0" alt="" /></td>
-
-    </tr>
-
-    <tr>
-
-      <td colspan="2" rowspan="3" bgcolor="#EFEFEF"><li>
-
-        <div align="left"><span class="STYLE1"><span class="STYLE2"><span class="STYLE3"><span class="STYLE4"><span class="STYLE5"><span class="STYLE6"><a href="draw.html" target="_blank">网络涂鸦板</a><a href="https://groups.google.com/group/ghtxx" target="_blank">〔空间备用论坛〕</a></span></span></span></span></span></span></div>
-
-       </li>
-
-					      <li class="STYLE6">
-
-					        <div align="left"><a href="calc.html" target="_blank">网络计算器</a></div>
-
-					      </li>
-
-				          <li class="STYLE6">
-
-				            <div align="left"><a href="date.html" target="_blank">简易万年历</a> and 
-
-                                    <script>utmx_section("Register here")</script>bbs register</noscript>
-
-                            </div>
-
-				          </li>
-
-				          <li class="STYLE6">
-
-				            <div align="left"><a href="https://www.google.com/maps" target="_blank">google地图应用</a></div>
-
-				          </li>
-
-        <li class="STYLE6">
-
-          <div align="left"><a href="https://exmail.qq.com/cgi-bin/loginpage?t=logindomain&s=logout&f=biz&param=%40ghtxx.cn" target="_blank">管理电子邮件</a></div>
-
-        </li>
-
-        <li class="STYLE6">
-
-          <div align="left">鸣谢<a href="http://www.gnu.org" target="_blank">GNU.org</a>、<a href="http://www.apache.org/" target="_blank">apache</a>以及<a href="http://www.linux.org/" target="_blank">Linux</a></div>
-
-        </li>
-
-        <li class="STYLE6">
-
-          <div align="left"><a href="http://www.miibeian.gov.cn/" target="_blank">  皖ICP备06012908号</a>            </div>
-
-            </div>
-
-      </li></td>
-
-      <td><img src="images/spacer.gif" width="1" height="25" border="0" alt="" /></td>
-
-    </tr>
-
-    <tr>
-
-      <td rowspan="4" colspan="2"><img name="index_r12_c7" src="images/index_r12_c7.jpg" width="339" height="210" border="0" id="index_r12_c7" alt="" /></td>
-
-      <td><img src="images/spacer.gif" width="1" height="27" border="0" alt="" /></td>
-
-    </tr>
-
-    <tr>
-
-      <td rowspan="3"><img name="index_r13_c4" src="images/index_r13_c4.jpg" width="26" height="183" border="0" id="index_r13_c4" alt="" /></td>
-
-      <td rowspan="2" bgcolor="#E0E0DE"></td>
-
-      <td rowspan="3"><img name="index_r13_c6" src="images/index_r13_c6.jpg" width="24" height="183" border="0" id="index_r13_c6" alt="" /></td>
-
-      <td><img src="images/spacer.gif" width="1" height="78" border="0" alt="" /></td>
-
-    </tr>
-
-    <tr>
-
-      <td rowspan="2"><img name="index_r14_c2" src="images/index_r14_c2.jpg" width="172" height="105" border="0" id="index_r14_c2" alt="" /></td>
-
-      <td rowspan="2"><img name="index_r14_c3" src="images/index_r14_c3.jpg" width="124" height="105" border="0" id="index_r14_c3" alt="" /></td>
-
-      <td><img src="images/spacer.gif" width="1" height="13" border="0" alt="" /></td>
-
-    </tr>
-
-    <tr>
-
-      <td><a href="https://lxj.ghtxx.cn:88/hdwiki"><img name="index_r15_c5" src="images/index_r15_c5.jpg" width="151" height="92" border="0" id="index_r15_c5" alt="到干海棠中心学习啰" /></a></td>
-
-      <td><img src="images/spacer.gif" width="1" height="92" border="0" alt="" /></td>
-
-    </tr>
-
-    <tr>
-
-      <td colspan="7"><img name="index_r16_c2" src="images/index_r16_c2.jpg" width="836" height="30" border="0" id="index_r16_c2" alt="" /></td>
-
-      <td><img src="images/spacer.gif" width="1" height="30" border="0" alt="" /></td>
-
-    </tr>
-
-    <tr>
-
-      <td colspan="7"><img name="index_r17_c1" src="images/index_r17_c1.jpg" width="811" height="14" border="0" id="index_r17_c1" alt="" /></td>
-
-      <td><a href="http://lxj.ghtxx.cn:88/shower/"><img name="index_r17_c8" src="images/index_r17_c8.jpg" width="192" height="14" border="0" id="index_r17_c8" alt="站长博客" /></a></td>
-
-      <td><img src="images/spacer.gif" width="1" height="14" border="0" alt="" /></td>
-
-    </tr>
-
-</table>
-
- </div>
-
- <p>
+     
 
    <!-- google-analytics -->
 
