--- a/index.htm
+++ b/index.htm
@@ -6,10 +6,6 @@
 
 <title>★☆干海棠信息中心－首页☆★</title>
 
-<meta name="keywords" content="ghtxx,信息技术,自由空间,论坛,ght,干海棠,学习">
-
-<meta name="baidu-site-verification" content="LluCBGTnNc" />
-
 <link title="RSS 2.0" type="application/rss+xml" href="http://rss.ghtxx.cn" rel="alternate" />
 
 <link rel="icon" href="favicon.ico" type="image/x-icon" />
@@ -17,35 +13,6 @@
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
-
-<!-- Google Website Optimizer Control Script -->
-
-<script>
-
-function utmx_section(){}function utmx(){}
-
-(function(){var k='3884434425',d=document,l=d.location,c=d.cookie;function f(n){
-
-if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.indexOf(';',i);return escape(c.substring(i+n.
-
-length+1,j<0?c.length:j))}}}var x=f('__utmx'),xx=f('__utmxx'),h=l.hash;
-
-d.write('<sc'+'ript src="'+
-
-'http'+(l.protocol=='https:'?'s://ssl':'://www')+'.google-analytics.com'
-
-+'/siteopt.js?v=1&utmxkey='+k+'&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='
-
-+new Date().valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
-
-'" type="text/javascript" charset="utf-8"></sc'+'ript>')})();
-
-</script>
-
-<!-- End of Google Website Optimizer Control Script -->
-
-
 
 </head>
 
@@ -55,39 +22,15 @@ d.write('<sc'+'ript src="'+
 
   <body   style="overflow:hidden">
 
-  <!-- Google Website Optimizer Tracking Script -->
-
-<script>
-
-if(typeof(urchinTracker)!='function')document.write('<sc'+'ript src="'+
-
-'http'+(document.location.protocol=='https:'?'s://ssl':'://www')+
-
-'.google-analytics.com/urchin.js'+'"></sc'+'ript>')
-
-</script>
-
-<script>
-
-try {
-
-_uacct = 'UA-482604-9';
-
-urchinTracker("/3884434425/test");
-
-} catch (err) { }
-
-</script>
-
-<!-- End of Google Website Optimizer Tracking Script -->
-
-这个网站已经到了该全面重建的时候了，这只是我06年开始计算机网络化教学的一个试验田，可惜不能得到重视，也没有足够的资源来探索，现将其整理恢复中。这个网站已经服务过数千名学生，不知道有几个学生会真的以计算机为学业目标了。
+   这个网站已经到了该全面重建的时候了，这只是我06年开始计算机网络化教学的一个试验田，可惜不能得到重视，也没有足够的资源来探索，现将其整理恢复中。<a href="https://i.ghtxx.cn">教育相关内容已经迁移到https://i.ghtxx.cn</a>这个网站已经服务过数千名学生，不知道有几个学生会真的以计算机为学业目标了。
+	  
 	  <br>
+	  
 	  如果你有兴趣支持我继续研究这个网站化的教学试验，欢迎通过微信或paypal支持我。<a href="https://www.paypal.com/paypalme/leejarod" target="_blank">我的PayPal链接</a>
 	  
 	  <br>
 	  <img name="wechat-payme" src="images/wepay.jpg" width="667" height="671" border="0" id="wepay" alt="用微信扫一扫向我付款" />
-
+	<br>
 
       <td rowspan="10" colspan="2"><img name="index_r2_c7" src="images/index_r2_c7.jpg" width="339" height="308" border="0" id="index_r2_c7" alt="海棠之美，不在其形，不在其香，但求其意！" /></td>
 
