--- a/go/index.htm
+++ b/go/index.htm
@@ -2,9 +2,9 @@
 <title>GHTxx.cn</title>
 <link title="RSS 2.0" type="application/rss+xml" href="http://rss.ghtxx.cn" rel="alternate" />
 <meta http-equiv="refresh" content="1;URL=http://www.ghtxx.cn/">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312"></head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"></head>
 <body>
-欢迎访问<a href="http://www.ghtxx.cn/">GHTxx.cn</a>，马上继续...... 
+禄露脫颅路脙脦脢<a href="http://www.ghtxx.cn/">GHTxx.cn</a>拢卢脗铆脡脧录脤脨酶...... 
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
