--- a/nas/index.html
+++ b/nas/index.html
@@ -47,7 +47,7 @@ div#container {
 <div id="container">
 <img src="web_images/icon.png" />
 <p id="paragraph">我们通过三块硬盘组成的Web Station 已启用。若了解更多设置与使用方法，请通过电子邮件与李老师联系</p>
-<p><a herf="https://valid.x86.fr/zn8v04"><img src="../images/zn8v04.png" width="350" height="22" alt="myNewPC"/></a></p>
+<p><a href="https://valid.x86.fr/zn8v04" target="_blank"><img src="web_images/zn8v04.png" width="350" height="22" alt="myNewPC"/></a></p>
 </div>
 </div>
 
