--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>GHTxx.cn</title>
 <link title="RSS 2.0" type="application/rss+xml" href="http://rss.ghtxx.cn" rel="alternate" />
-<meta http-equiv="refresh" content="1;URL=http://i.ghtxx.cn/">
+<meta http-equiv="refresh" content="1;URL=https://2006.ghtxx.cn:8/bbs/">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></head>
 <body>
-请稍等转入<a href="http://i.ghtxx.cn/">GHTxx.cn</a>主站点...... 
+请稍等转入<a href="https://2006.ghtxx.cn:8/bbs/">GHTxx.cn</a>主站点...... 
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
