启用index2作备用主页

--- a/index2.html
+++ b/index2.html
@@ -22,7 +22,7 @@
 
   <body   style="overflow:hidden">
 
-   这个网站已经到了该全面重建的时候了，这只是我06年开始计算机网络化教学的一个试验田，可惜不能得到重视，也没有足够的资源来探索，现将其整理恢复中。<a href="https://i.ghtxx.cn">教育相关内容已经迁移到https://i.ghtxx.cn</a>这个网站已经服务过数千名学生，不知道有几个学生会真的以计算机为学业目标了。
+   这个网站已经到了该全面重建的时候了，这只是我06年开始计算机网络化教学的一个试验田，可惜不能得到重视，也没有足够的资源来探索，现将其整理恢复中。<a href="https://m.ghtxx.cn">教育相关内容已经迁移到https://m.ghtxx.cn</a>这个网站已经服务过数千名学生，不知道有几个学生会真的以计算机为学业目标了。
 	  
 	  <br>
 	  
