--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta http-equiv="refresh" content="1;URL=https://2006.ghtxx.cn:8/bbs/">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></head>
 <body>
+  <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "8654cf2aa14e4262a2a1bbd183095f84"}'></script><!-- End Cloudflare Web Analytics -->
+  
 请稍等转入<a href="https://2006.ghtxx.cn:8/bbs/">GHTxx2006</a>主站点...... 
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
