XP电脑不能使用https功能

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>MyWork</title>
 <link title="RSS 2.0" type="application/rss+xml" href="http://rss.ghtxx.cn" rel="alternate" />
-<meta http-equiv="refresh" content="1;URL=https://2006.ghtxx.cn:8/bbs/">
+<meta http-equiv="refresh" content="1;URL=http://2006.ghtxx.cn:89/bbs/">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></head>
 <body>
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "8654cf2aa14e4262a2a1bbd183095f84"}'></script><!-- End Cloudflare Web Analytics -->
